# buff2bmp

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: color_print.h  global.h
src/: color_print.c  cut.c  main.c  merge.c  split.c
